blogs and search features

--- a/templates/search.html
+++ b/templates/search.html
@@ -2,13 +2,10 @@
 
 {% block content %}
 
-
-
-
-<h3 class="text-uppercase text-warning" style="letter-spacing: 2px;">Category - {{ category }}</h3>
+<h3 class="text-warning" style="letter-spacing: 2px;">Search Term - {{ keyword }}</h3>
 <div class="row mb-2">
-    {% if posts %}
-    {% for post in posts %}
+    {% if blogs %}
+    {% for post in blogs %}
     <div class="col-md-6">
         <div class="card border-0">
             <div class="card-body">
@@ -23,11 +20,5 @@
     <p>no posts found</p>
     {% endif %}
 </div>
-
-<!-- <h3 class="text-uppercase text-warning" style="letter-spacing: 2px;">Recent Posts</h3> -->
-
-
-</div>
-
 
 {% endblock %}
