dashboard permissions for staff and superuser

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,9 @@
                     <a class="btn btn-sm btn-warning" href="{% url 'login' %}">Login</a> &nbsp;
                     <a class="btn btn-sm btn-outline-secondary" href="{% url 'register' %}">Register</a>
                     {% else %}
+                    {% if user.is_staff or user.is_superuser %}
                     <span><a href="{% url 'dashboard' %}">Dashboard</a></span>
+                    {% endif %}
                     &emsp;
                     <span><a href="{% url 'logout' %}">Logout</a></span>
                     {% endif %}
